# colosseum-solspinner-api

./: Cargo.toml  migrations.sql
migrations/: 20240403171650_init.sql  20240405135018_logos_url.sql  20240406231822_selected-tokens.sql  20240406234454_selected-token-add-active.sql  20240410225917_positions-current.sql  20240413192752_token-state.sql  20240414204642_token-extras.sql
src/: coin_selector.rs  errors.rs  main.rs  utils.rs
src/clients/: client_birdeye.rs  client_jupiter.rs  client_solana.rs  clients_structs.rs  mod.rs
src/coordinators/: coordinator_price.rs  mod.rs
src/cron_jobs/: coin_selector.rs  cron_structs.rs  mod.rs  token_updater.rs
src/errors/: api_errors.rs  cron_errors.rs  mod.rs  solana_errors.rs
src/handlers/: mod.rs  position_handlers.rs  token_handlers.rs  user_handlers.rs
src/models/: mod.rs  model_position.rs  model_selected_token.rs  model_token.rs  model_user.rs  position.rs  token.rs  user.rs
src/solana/: client_solana.rs  mod.rs
src/web/: mod.rs  mw_auth.rs  routes_play.rs  routes_positions.rs  routes_tokens.rs  routes_users.rs
