[package]
name = "solspinner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
axum = "0.7.4"
chrono = "0.4.35"
rand = "0.8.5"
reqwest = { version = "0.12.2", features = ["json"]}
serde = { version = "1.0.197", features = ["derive"] }
shuttle-axum = "0.45.0"
shuttle-runtime = "0.45.0"
shuttle-shared-db = { version = "0.45.0", features = ["sqlx", "postgres"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
tokio = { version = "1.28.2", features = ["full"]}
tokio-cron-scheduler = "0.10.0"
tower-http = {version = "0.5.2", features = ["cors"]}
uuid = { version = "1.8.0", features = ["serde", "v4"] }
